<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/QuizAppTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34sp"
                android:layout_marginLeft="34sp"
                android:layout_marginEnd="34sp"
                android:layout_marginRight="34sp"
                android:fontFamily="casual"
                android:text="@string/Quizz_App"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24sp"
                android:background="@drawable/rounded_white_bg"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/WelcomeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="16sp"
                    android:fontFamily="@font/alef"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/NameHintTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:gravity="center"
                    android:text="@string/EnterName"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/nameHint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/start"
                    app:backgroundTint="@color/purple_700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24sp"
                    android:layout_marginLeft="24sp"
                    android:layout_marginTop="60sp"
                    android:layout_marginEnd="24sp"
                    android:layout_marginRight="24sp"
                    android:layout_marginBottom="60sp"
                    android:background="@drawable/rounded_white_bg"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="16sp"
                    android:paddingRight="16sp">

                    <TextView
                        android:id="@+id/welcomeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:layout_marginBottom="16sp"
                        android:fontFamily="@font/alef"
                        android:gravity="center"
                        android:text="@string/headerInfo"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="60dp"
                        android:layout_height="73dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/flecha"
                        app:srcCompat="@drawable/flecha" />

                    <Button
                        android:id="@+id/infoButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_marginBottom="10sp"
                        android:text="@string/aprende"
                        app:backgroundTint="@color/purple_700" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>