<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".QuestionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/ImagenTema"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_margin="24sp"
            android:background="@drawable/rounded_white_bg"
            android:contentDescription="@string/bckground"
            app:srcCompat="@drawable/lopd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24sp"
                android:layout_marginLeft="24sp"
                android:layout_marginEnd="8sp"
                android:layout_marginRight="8sp"
                android:layout_weight="3"
                android:progress="0"
                android:progressDrawable="@drawable/cyan_rounded_borders"
                />

            <TextView
                android:id="@+id/textProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24sp"
                android:layout_marginRight="24sp"
                android:layout_weight="1"
                android:text="@string/StartingProgressBar"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <Button
            android:id="@+id/opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginTop="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            android:layout_marginBottom="12sp"
            android:background="@drawable/more_rounded_white_bg"
            app:backgroundTint="#FFFFFF" />

        <Button
            android:id="@+id/opcion2"
            style="@style/optionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/opcion3"
            style="@style/optionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/opcion4"
            style="@style/optionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="24sp"
            app:backgroundTint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginLeft="4sp"
                android:layout_marginEnd="4sp"
                android:layout_marginRight="4sp"
                android:layout_weight="1"
                android:background="@drawable/more_rounded_white_bg"
                android:padding="8sp"
                android:text="@string/Previous"
                app:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginLeft="4sp"
                android:layout_marginEnd="4sp"
                android:layout_marginRight="4sp"
                android:layout_weight="1"
                android:background="@drawable/more_rounded_white_bg"
                android:padding="8sp"
                android:text="@string/next"
                android:textColor="@color/purple_200"
                app:backgroundTint="@color/purple_500" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>